--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 </head>
 <body>
     <div class="container">
-        <h2>Watermark Arfica</h2>
+        <h2>Watermark Mama Zaid Istri Ayah Zaid</h2>
         <input type="file" id="photo" accept="image/*" required>
         <button id="addWatermark">Upload and Add Watermark</button>
 
